syntax = "proto3";

import "pages/entities/source.proto";

package webarchiver.v1;

service SourcesService {
  rpc ListRevisionSources(ListRevisionSourcesRequest) returns (ListRevisionSourcesResponse) {}
  rpc GetSource(GetSourceRequest) returns (Source) {}
  rpc ListArchivedSources(ListArchivedSourcesRequest) returns (ListArchivedSourcesResponse) {}
}

message ListRevisionSourcesRequest {
  // Offset of the query for pagination
  uint32 offset = 1;

  // Limit per page of the query for pagination
  uint32 limit = 2;

  // Revision ID
  uint32 revision_id = 3;
}

message ListRevisionSourcesResponse {
  repeated Source data = 1;
}

message ListArchivedSourcesResponse {
  repeated Source data = 1;
}

message GetSourceRequest {
  string id = 1;
}

message ListArchivedSourcesRequest {
  string id = 1;
}


